<resources>
    <string name="app_name">SecuGenDemo</string>
    <string name="capture">Capture</string>
    <string name="init">Initialize</string>
    <string name="log">Log</string>
    <string name="ledon">LED</string>
    <string name="ledoff">LED Off</string>
    <string name="sdktest">SDK Test</string>
    <string name="toggle_led">Toggle LED</string>
    <string name="match">Verify</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="cb_scenabled">SC En</string>
    <string name="auto_on">Auto On</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="smart_capture_on">Smart Cap ON</string>
    <string name="smart_capture_off">Smart Cap OFF</string>
    <string name="auto_on_enabled">AutoOn Enabled</string>
    <string name="auto_on_disabled">AutoOn Disabled</string>
    <string name="capture_mode_n_on">Mode N On</string>
    <string name="capture_mode_n_off">Mode N Off</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section_main">Main</string>
    <string name="title_section_test_sdk">SDK Test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fingerprint_view">Fingerprint View</string>
</resources>
