<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.goldminer.secugendemo.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/TopButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ledon" />

        <Button
            android:id="@+id/btnCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/capture" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/FingerprintViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFingerprintView"
            android:layout_width="208dp"
            android:layout_height="240dp"
            android:layout_weight="1"
            android:contentDescription="@string/fingerprint_view"
            android:src="@android:drawable/picture_frame" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Switch
                android:id="@+id/switchAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_on" />

            <Switch
                android:id="@+id/switchSmartCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smart_capture" />

            <Switch
                android:id="@+id/switchCaptureModeN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_mode_n_on" />

            <CheckBox
                android:id="@+id/cbMatched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cb_matched" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CheckInContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/RegisterContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgRegister"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@android:drawable/picture_frame" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/VerifyContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVerify"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@android:drawable/picture_frame" />

            <Button
                android:id="@+id/btnMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/match" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtCheckResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome" />
</LinearLayout>
